# 3DRigidRegistration

./: .gitignore  ImageSeriesReadWrite.cxx  README.md
3DRigidTransform/: CMakeLists.txt  ResampleImageFilter4.cxx
ConvertBitDepth/: 16to8.cxx  8to16.cxx  CMakeLists.txt  ConvertBitDepth.h
ImageReadSeriesWrite/: CMakeLists.txt  ImageReadImageSeriesWrite.cxx
ImageRegistration/: CMakeLists.txt  ImageRegistration8.cxx  VolumeRegistration.cxx  VolumeRegistration.h
ImageSeriesReadWrite/: CMakeLists.txt  ImageSeriesReadWrite.cxx
ResampleSliceData/: CMakeLists.txt  ResampleSliceData.cc
SandGrainDetection/: CMakeLists.txt  ExtractSandGrainCentroids.cxx  ExtractSandGrainCentroids.h  PointSetUtil.h  RegisterPointSets.cxx  SandGrainDetector.cxx  SandGrainDetector.h  TransformPointSet.cxx
ShrinkImageFilter/: CMakeLists.txt  ShrinkImageFilter.cxx
SubsampleVolume/: SubsampleVolume.cxx
test/: CMakeLists.txt  RescaleIntensities.cxx
